# bokkie

./: .dockerignore  .env.example  .env.worker.example  .gitignore  .repomixignore  AGENTS.md  Dockerfile  README.md  bokkie.toml  docker-compose.worker.podman.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  repomix.config.json  setup.sh
agents/coder/: PROMPT.md
agents/planner/: PROMPT.md
agents/reviewer/: PROMPT.md
agents/setup/: PROMPT.md
agents/verifier/: PROMPT.md
docs/: campaign_first_milestone.md  setup.sh
jobs/: nightly-ai-news.toml
src/bokkie/: __init__.py  app.py  cli.py  config.py  db.py  enums.py  models.py  prompts.py  schemas.py  telegram_bot.py  worker.py
src/bokkie/services/: artifacts.py  codex.py  executors.py  gitops.py  notifications.py  orchestrator.py  repo_config.py
src/bokkie/templates/: base.html  campaign_detail.html  campaigns.html  executors.html  intake.html  phase_detail.html  reviews.html  run_detail.html  runs.html  workers.html
tasks/: autoresearch.toml  change.toml  research_iteration.toml
tests/: conftest.py  test_api_worker_flow.py  test_campaigns.py  test_codex_backend.py  test_db.py  test_executors.py  test_notifications.py  test_orchestrator.py  test_telegram_bot.py  test_web_ui.py
