[project]
name = "bokkie"
version = "0.1.0"
description = "A multi-host workflow engine for Codex-backed workers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic-settings>=2.11.0",
  "psycopg[binary]>=3.2.9",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.43",
  "typer>=0.17.4",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.11",
]

[project.scripts]
bokkie = "bokkie.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bokkie"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]
